<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_events" />

        <Button
            android:id="@+id/edit_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/del_events" />

        <Button
            android:id="@+id/show_all_events"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_all_events" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_month"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <GridView
        android:id="@+id/days_of_week"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="7" >
    </GridView>

    <GridView
        android:id="@+id/calender_view"
        android:layout_width="match_parent"
        android:layout_height="379dp"
        android:numColumns="7" >
    </GridView>

</LinearLayout>